--- a/.htaccess
+++ b/.htaccess
@@ -15,8 +15,8 @@ RewriteCond %{REQUEST_URI} !^/uploads
 RewriteRule ^ /index.php [QSA,L]
 
 php_value memory_limit 512M
-php_value post_max_size 128M
-php_value upload_max_filesize 100M
+#php_value post_max_size 128M
+#php_value upload_max_filesize 100M
 
 # AddType TYPE/SUBTYPE EXTENSION
      
